--- a/index.html
+++ b/index.html
@@ -111,9 +111,19 @@
         <div class="col-lg-6">
           <div class="welcome_text">
             <h4>About Myself</h4>
-            <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate
-              behavior is often laughed.</p>
-            <div class="row">
+            <!-- <p>
+              I am currently working as Information Technology Analyst with a
+              reputed organization, TATA CONSULTANCY SERVICES LIMITED Limited ,
+              I believe I meet all the essential criteria for the position.
+              Please find below some of my key accomplishments:
+            </p> -->
+            <ul>
+              <li><h5>LIFE LONG LEARNEAR</h6></li>
+              <li><h5>NEVER AFRAID FAILURES</h6></li>
+              <li><h5>WORK IMPATIENTLY BUT HAVE PATIENCE FOR SUCCESS</h6></li>
+            </ul>
+
+            <!-- <div class="row">
               <div class="col-md-4">
                 <div class="wel_item">
                   <i class="lnr lnr-database"></i>
@@ -135,7 +145,7 @@
                   <p>Total Volunteers</p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-lg-6">
